--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="ball black"></div>
-  <div class="ball white"></div>
-  <div class="ball grey"></div>
+  <div class="container">
+    <div class="ball blue-light"></div>
+    <div class="ball blue-medium"></div>
+    <div class="ball blue-dark"></div>
+  </div>
 </body>
 </html>
